--- a/Projeto_Final_Semantix.ipynb
+++ b/Projeto_Final_Semantix.ipynb
@@ -13,6 +13,8 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Está incompleto.\n",
+        "\n",
         "# 1. Introdução \n",
         "\n",
         "\n",
@@ -49,8 +51,6 @@
       },
       "outputs": [],
       "source": [
-        "#Estou iniciando!!! Está incompleto.\n",
-        "\n",
         "# instalando as dependências\n",
         "!apt-get update -qq\n",
         "!apt-get install openjdk-8-jdk-headless -qq > /dev/null\n",
@@ -86,7 +86,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 117,
       "metadata": {
         "id": "nxjsOmZdoLaO"
       },
@@ -96,7 +96,9 @@
         "import numpy as np\n",
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
-        "import seaborn as sns"
+        "import seaborn as sns\n",
+        "import pyspark.sql.functions as f\n",
+        "import pyspark.sql.types as t"
       ]
     },
     {
@@ -1062,11 +1064,29 @@
         "Com as consultas abaixo podemos avaliar a seguinte situação:\n",
         "\n",
         "1.   Os dados que não possuem valores nulos: numero de inscrição, ano, faixa etaria, sexo, estado civil, cor/raça, nacionalidade, situação conclusão EM, ano conclusão EM, tipo de escola EM, treineiro, código município da prova,  nome do municipio da prova, codigo da UF da prova, sigla UF da prova, presença nas provas objvs e tipo lingua.\n",
+        "\n",
         "2.   Os dados que possuem valores nulos, seguidos da quantidade de nulos encontrados: tipo de instituição do EM (2293004), codigo municipio da escola (2576026), nome do município da escola (2576026), codigo da UF da escola (2576026), sigla UF da escola (2576026), dependencia administrativa da escola (2576026), localização da escola (25760226), situação de funcionamento da escola (2576026), codigo da prova CN (1143988), codigo da prova CH (1011453), código da prova LC (1011453), código da prova MT (1143988), Nota prova de CN(1143988), Nota prova de CH(1011453), Nota prova de LC(1011453), Nota prova de MT(1143988), respostas CN (1143988),respostas CH (1011453), respostas LC (1011453), respostas MT (1143988), gabarito CN (1143988), gabarito CH (1011453), gabarito LC (1011453), gabarito MT (1143988), status redação (1011453),nota competencia1 (1011453), nota competencia2 (1011453), nota competencia3 (1011453),  nota competencia4 (1011453), nota competencia5 (1011453), nota redação (1011453), Q001 a Q025 (2).\n",
         "\n"
       ],
       "metadata": {
         "id": "zPaV9IjvhzP_"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- Quantos alunos são treineiros.\n",
+        "- Quantidade de alunos por tipo de linguagem.\n",
+        "- Criar um novo DF excluindo os nulos.\n",
+        "- Quantidade de alunos por tipo de instituição.\n",
+        "- Média nas notas das provas.\n",
+        "- O tipo de instituição influencia na nota do aluno?\n",
+        "- Comparação de rendas.\n",
+        "- Acesso a internet influencia nas notas?\n",
+        "- Escolaridade dos pais influencia nas notas?"
+      ],
+      "metadata": {
+        "id": "vTNPj9pC1RP8"
       }
     },
     {
@@ -1683,58 +1703,55 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
+      "source": [
+        "12.9% dos candidatos eram treineiros."
+      ],
       "metadata": {
-        "id": "82OJimxNHb9L"
-      },
-      "outputs": [],
-      "source": []
+        "id": "h85dKWUc6le_"
+      }
     },
     {
       "cell_type": "code",
-      "execution_count": 80,
+      "execution_count": 134,
       "metadata": {
         "id": "OuK0Rv7xAU3v",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e02fdee9-6b16-44e8-b236-d96fe9a1f3f0"
+        "outputId": "2db5f4aa-a30a-4ba3-b79e-d92088151151"
       },
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "+-------+\n",
-            "|    QTD|\n",
-            "+-------+\n",
-            "|1795365|\n",
-            "+-------+\n",
-            "\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "12.9"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 134
         }
       ],
       "source": [
-        "# A maioria dos candidatos possui 18 anos.\n",
-        "# Mais de 50% dos candidatos possuem idade até 19 anos\n",
-        "# 25% dos candidatos possuem 23 anos ou mais \n",
-        "\n",
-        "spark.sql(\"select count(*) QTD from enem where TP_FAIXA_ETARIA >=4\").show()\n",
-        "#df[\"TP_FAIXA_ETARIA\"].describe().round(2)\n",
-        "\n",
-        "#spark.sql(\"select nu_inscricao from enem a  order by 1\").show()\n",
-        "\n",
-        "resp = spark.sql(\"select tp_faixa_etaria QTD from enem a where a.nu_inscricao <= 210051014338\")\n",
-        "resp = resp.toPandas()\n",
-        "#resp"
+        "perc_treineiros = df.IN_TREINEIRO[(df.IN_TREINEIRO == 1)].count() /  df['IN_TREINEIRO'].count() * 100\n",
+        "perc_treineiros.round(2)\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "BpCRPlvA27Pf"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNle5Lkpm9XsFr2OKcJcnjg",
+      "authorship_tag": "ABX9TyNmsBhI7h7Riy3IzpbzQ6y6",
       "include_colab_link": true
     },
     "kernelspec": {
